# research-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  renovate.json
agent/: README.md  config.py  graph.py  langgraph.json  pyproject.toml  requirements.txt  setup.py  state.py  structure_planner.py
agent/agent/: graph.py  state.py
agent/agent/tools/: outline_writer.py  section_writer.py  tavily_search.py
agent/tools/: outline_writer.py  section_writer.py  tavily_extract.py  tavily_search.py
frontend/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: chat.tsx  document-footer.tsx  document-options.tsx  document-viewer.tsx  documents-editor.tsx  documents-scrollbar.tsx  documents-view.tsx  footnotes.tsx  header-bar.tsx  progress.tsx  research-context.tsx  resource-item.tsx  resource-modal.tsx  structure-proposal-viewer.tsx  toolbar.tsx  welcome-screen.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx  view-edit-toggle.tsx
frontend/src/lib/: consts.ts  types.ts  utils.ts
frontend/src/lib/hooks/: useLocalStorage.ts
frontend/src/types/: document-options-state.ts
ui/: pnpm-lock.yaml  tailwind.config.ts
ui/src/app/: globals.css
ui/src/app/api/copilotkit/: route.ts
ui/src/components/: chat.tsx
