[tool.poetry]
name = "agent"
version = "0.1.0"
description = "LangChain agent project"
authors = ["Ran Matcop"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.11"
langgraph = "^0.2.59"
langchain-community = "^0.3.11"
tavily-python = "^0.5.0"
langchain-core = ">=0.3.15"
langchain-openai = "^0.2.12"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
json5 = "^0.10.0"
copilotkit = "0.1.29"
langgraph-cli = {version = "^0.1.55", extras = ["inmem"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
